--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Grace Monger</title>
     <link rel="stylesheet" href="/style.css" />
     <script defer src="/bundle.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   </head>
   <body>
     <div id="app"></div>
