--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="/style.css" />
     <script defer src="/bundle.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nabla&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
